# learning-assignments

./: .gitignore  INSTALLATION.md  README.md  main.py  pyproject.toml  requirements.txt
Chapter1/module1/: opencv_hands_on.py
Chapter1/module10/: ROI_EXTRACTION_USAGE.md  roi_extraction_utility.py  test_roi_extraction.py
Chapter1/module11/: LOGO_OVERLAY_USAGE.md  logo_overlay_utility.py  test_logo_overlay.py
Chapter1/module13/: VIDEO_PLAYER_USAGE.md  test_video_basic.py  test_video_player_extractor.py  video_player_extractor.py
Chapter1/module2/: opencv_blueprint_roadmap.py
Chapter1/module3/: opencv_enhancement_utility.py
Chapter1/module4/: opencv_filter_benchmarking.py
Chapter1/module5/: opencv_edge_detector_app.py  test_edge_detector.py
Chapter1/module6/: opencv_histogram_visualization.py
Chapter1/module7/: document_binarizer.py
Chapter1/module8/: CUSTOM_IMAGE_USAGE.md  morphological_visual_comparison.py
Chapter1/module9/: COIN_COUNTER_USAGE.md  automated_coin_counter.py  test_coin_counter.py
Chapter2/module2/: flowers102_pytorch_pipeline.ipynb
Chapter2/module3/: 01_dataset_preparation.ipynb  02_model_training_colab.ipynb  QUICK_START.md  README_WORKFLOW.md  SETUP_SUMMARY.md
Chapter2/module4/: 03_data_augmentation_training.ipynb
Chapter2/module5/: 01_transfer_learning.ipynb  QUICK_START.md  README.md
Chapter2/module6/: 01_fine_tuning.ipynb  FINE_TUNING_CHEAT_SHEET.md  README.md
Chapter2/module9/: 01_tensorboard_tracking.ipynb  02_wandb_tracking.ipynb  03_mlflow_tracking.ipynb  README.md
(+7 files in other folders)
