[project]
name = "learning-assignments"
version = "0.1.0"
description = "Computer Vision Learning Assignments - CNN Classification Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.0",
    "opencv-python>=4.10.0.84",
    "piexif>=1.1.3",
    "pillow>=10.4.0",
    "pandas>=2.0.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.26.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
